[package]
name = "e6"
version = "0.1.1"
edition = "2024"
authors = ["Thoth (@thothington) (FashionableStubble)"]
description = "A batteries-included e621 API interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FashionableStubble/e6"
readme = "README.md"
keywords = ["e621", "furry"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
csv = "1.3.1"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["futures", "in_memory", "rayon", "tokio"] }
md5 = "0.7.0"
rayon = "1.11.0"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "tokio-macros"] }
